k8s/Ingress/ingress.yaml
# Install: kubectl apply -f https://raw.githubusercontent.com/kubernetes/ingress-nginx/controller-v1.10.1/deploy/static/provider/baremetal/deploy.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gyan-bhandar-ingress
  namespace: gyaan-bhandar
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/proxy-read-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "300"
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gyan-bhandar-backend-svc
                port:
                  number: 5000
          - path: /()(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: gyan-bhandar-frontend-svc
                port:
                  number: 80
